User favorites doc. fix
